force-app/main/default/objects/SP_Resource__c/SP_Resource__c.object-meta.xml
<CustomObject>
    <label>SP Resource</label>
    <nameField>
        <label>SP Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>