force-app/main/default/objects/SP_Resource__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SP Resources</relationshipLabel>
    <relationshipName>SP_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>