force-app/main/default/objects/SP_Resource__c/fields/Bookable__c.field-meta.xml
<CustomField>
    <fullName>Bookable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookable</label>
    <type>Checkbox</type>
</CustomField>