force-app/main/default/objects/SP_Resource__c/fields/Parent_Resource__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Resource</label>
    <referenceTo>SP_Resource__c</referenceTo>
    <relationshipLabel>SP Resources</relationshipLabel>
    <relationshipName>SP_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>