force-app/main/default/objects/SP_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bookable__c</columns>
    <columns>Icon__c</columns>
    <columns>Parent_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>